# cuschatai

./: .env  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  telegram_app.py  telegrambot.py
app/: animations.css  globals.css  page.tsx
app/api/setup/: route.ts
app/api/telegram/: route.ts
components/: theme-toggle.tsx
data/: initial-context.json
data_collected/business_information/: core_values_and_mission_statement.md  customer_and_external_relations.md  human_resources_and_employee_policies.md
data_collected/faq/: business_information.csv  business_information.json  conversation_flow.md  customer-service-faq.json
data_collected/raw/: business_plan.md  customer-guide.md  dunder_mifflin_employee_handbook.md  legal_and_compliance_documents.md  operational_and_workplace_guidelines.md
lib/: db.ts
migrations/: 001_create_company_settings.sql
src/: app_gradio.py  google_calendar.py  gradio_app.py  model.py  tele_basis.py  tele_completed.py  tele_model.py  telegram_app.py
src/app/: config.py  handlers.py
